--- a/styleguide/source/css/style.css
+++ b/styleguide/source/css/style.css
@@ -911,7 +911,7 @@ figure figcaption {
   margin-bottom: 1em;
   border-color: #d9d6d3;
   padding-bottom: 1em;
-  border-color: #d6a663;
+  border-color: #a09991;
 }
 /* line 88, patterns/_navigation.scss */
 .nav-footer li:last-child a {
@@ -1112,17 +1112,22 @@ input.is-error {
 .social-media li {
   display: inline-block;
   font-size: 1.75em;
-  margin: 1em 1em 1em 0;
+  margin: 0 .5em;
 }
 @media (min-width: 64em) {
   /* line 2, patterns/_social-media.scss */
   .social-media li {
-    margin: 0 .75em .75em 0;
     font-size: 1.25em;
   }
 }
+@media (min-width: 75em) {
+  /* line 2, patterns/_social-media.scss */
+  .social-media li {
+    margin: 0 .75em 0 0;
+  }
+}
 
-/* line 14, patterns/_social-media.scss */
+/* line 16, patterns/_social-media.scss */
 .icon-label {
   position: absolute;
   height: 0;
@@ -2024,6 +2029,7 @@ header .emergency p {
 .main-logo {
   margin-bottom: 20px;
   display: inline-block;
+  max-width: 100%;
 }
 @media (min-width: 64em) {
   /* line 71, layout/_header.scss */
@@ -2031,7 +2037,7 @@ header .emergency p {
     float: none;
   }
 }
-/* line 79, layout/_header.scss */
+/* line 80, layout/_header.scss */
 .main-logo a {
   background: url("../img/hickory-logo.png") center no-repeat;
   background: url("../img/hickory-logo.svg") 0 0 no-repeat;
@@ -2042,32 +2048,33 @@ header .emergency p {
   width: 296px;
   height: 110px;
   background-size: 296px 110px;
+  max-width: 100%;
 }
 
-/* line 92, layout/_header.scss */
+/* line 94, layout/_header.scss */
 .ie8 header .main-logo a {
   background: url("../img/logo-temp.png") 0 0 no-repeat;
 }
 
-/* line 96, layout/_header.scss */
+/* line 98, layout/_header.scss */
 .mobilenav-trigger {
   color: white;
   padding: 1em;
   margin-bottom: 1em;
   background-color: #d6a663;
 }
-/* line 102, layout/_header.scss */
+/* line 104, layout/_header.scss */
 .mobilenav-trigger:before {
   content: "\f0c9";
   font-family: "FontAwesome";
   margin-right: .5em;
 }
-/* line 109, layout/_header.scss */
+/* line 111, layout/_header.scss */
 .mobilenav-trigger.active:before {
   content: "\f00d";
 }
 @media (min-width: 64em) {
-  /* line 96, layout/_header.scss */
+  /* line 98, layout/_header.scss */
   .mobilenav-trigger {
     display: none;
   }
@@ -2082,7 +2089,13 @@ footer {
   background-color: #dbd5c9;
   color: #a09991;
 }
-/* line 8, layout/_footer.scss */
+@media (min-width: 75em) {
+  /* line 1, layout/_footer.scss */
+  footer {
+    padding: 1.5rem 0;
+  }
+}
+/* line 12, layout/_footer.scss */
 footer .footer-padding {
   position: relative;
   margin: auto;
@@ -2094,50 +2107,86 @@ footer .footer-padding {
   *zoom: 1;
   clear: both;
 }
-/* line 12, layout/_footer.scss */
+/* line 16, layout/_footer.scss */
 footer p, footer li {
   margin-bottom: 0;
   font-size: .875em;
 }
-/* line 17, layout/_footer.scss */
+/* line 21, layout/_footer.scss */
 footer a {
   color: #a09991;
 }
 
-/* line 23, layout/_footer.scss */
+/* line 27, layout/_footer.scss */
 .nav-footer li:first-child {
   padding-left: 0;
 }
-@media (min-width: 64em) {
-  /* line 22, layout/_footer.scss */
+@media (min-width: 75em) {
+  /* line 26, layout/_footer.scss */
   .nav-footer {
     float: left;
+    margin-top: .625em;
   }
 }
 
-/* line 31, layout/_footer.scss */
+/* line 36, layout/_footer.scss */
 .footer-contact {
-  margin-bottom: 2rem;
+  margin: 2rem 0;
+  display: table;
+  table-layout: fixed;
+  width: 100%;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 @media (min-width: 64em) {
-  /* line 31, layout/_footer.scss */
+  /* line 36, layout/_footer.scss */
   .footer-contact {
-    float: right;
-    margin-bottom: 0;
+    width: auto;
   }
 }
-/* line 38, layout/_footer.scss */
-.footer-contact > * {
-  display: inline-block;
+@media (min-width: 75em) {
+  /* line 36, layout/_footer.scss */
+  .footer-contact {
+    float: right;
+    margin: 0;
+  }
 }
-/* line 42, layout/_footer.scss */
+/* line 52, layout/_footer.scss */
+.footer-contact > * {
+  display: block;
+  text-align: center;
+  margin: 1em auto;
+}
+@media (min-width: 37.5em) {
+  /* line 52, layout/_footer.scss */
+  .footer-contact > * {
+    display: table-cell;
+    margin: 0;
+    vertical-align: middle;
+  }
+}
+/* line 64, layout/_footer.scss */
 .footer-contact .phone {
-  border-right: 1px solid;
-  border-left: 1px solid;
   padding: 0 1em;
 }
+@media (min-width: 37.5em) {
+  /* line 64, layout/_footer.scss */
+  .footer-contact .phone {
+    border-right: 1px solid;
+    border-left: 1px solid;
+  }
+}
+/* line 72, layout/_footer.scss */
+.footer-contact .aaha-logo {
+  width: 2em;
+  margin: 0 auto;
+  padding: 0 1em;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
+  opacity: 0.4;
+}
 
-/* line 49, layout/_footer.scss */
+/* line 80, layout/_footer.scss */
 .backtotop {
   text-transform: uppercase;
   letter-spacing: .1em;
@@ -2145,7 +2194,7 @@ footer a {
   clear: both;
   text-align: center;
 }
-/* line 56, layout/_footer.scss */
+/* line 87, layout/_footer.scss */
 .backtotop a {
   color: #dbd5c9;
   padding: 1.5em;
@@ -2153,16 +2202,16 @@ footer a {
   display: block;
   text-decoration: none;
 }
-/* line 63, layout/_footer.scss */
+/* line 94, layout/_footer.scss */
 .backtotop a:hover, .backtotop a:active {
   background-color: #b3ada7;
 }
-/* line 67, layout/_footer.scss */
+/* line 98, layout/_footer.scss */
 .backtotop a i {
   margin-right: 1em;
 }
 @media (min-width: 64em) {
-  /* line 49, layout/_footer.scss */
+  /* line 80, layout/_footer.scss */
   .backtotop {
     display: none;
   }
