--- a/styleguide/source/_patterns/02-organisms/00-global/01-footer.mustache
+++ b/styleguide/source/_patterns/02-organisms/00-global/01-footer.mustache
@@ -5,6 +5,7 @@
 		<div class="footer-contact">
 			{{>molecules-social-media}}
 			{{>atoms-phone}}
+			<img src="../../img/aaha-black.png" alt="AAHA Accredited" class="aaha-logo">
 		</div>
 	</div>
 	<p class="backtotop"><a href="#"><i class="fa fa-chevron-up"></i>Back to top</a></p>
