--- a/styleguide/source/css/patterns/_social-media.scss
+++ b/styleguide/source/css/patterns/_social-media.scss
@@ -2,11 +2,13 @@
 	li {
 		display: inline-block;
 		font-size: 1.75em;
-		margin: 1em 1em 1em 0;
+		margin: 0 .5em;
 
 		@include breakpoint($l) {
-			margin: 0 .75em .75em 0;
 			font-size: 1.25em;
+		}
+		@include breakpoint($l2) {
+			margin: 0 .75em 0 0;
 		}
 	}
 }
