style inline forms

--- a/styleguide/source/_patterns/00-atoms/07-buttons/00-button.mustache
+++ b/styleguide/source/_patterns/00-atoms/07-buttons/00-button.mustache
@@ -1,1 +1,1 @@
-<button class="submit btn" type="submit" value="Button">Submit</button>
+<button class="submit btn" type="submit" value="Button">OK</button>
