--- a/styleguide/source/css/style.scss
+++ b/styleguide/source/css/style.scss
@@ -47,6 +47,7 @@
 @import "layout/doctors";
 @import "layout/pets";
 @import "layout/news";
+@import "layout/form-group";
 
 /* individual components, usually from Bower*/
 // @import "plugins/owl-carousel-base";
