adjust headings, and headings with strikethrough

--- a/styleguide/source/_patterns/02-organisms/02-megamenus/00-megamenu-about.mustache
+++ b/styleguide/source/_patterns/02-organisms/02-megamenus/00-megamenu-about.mustache
@@ -3,12 +3,16 @@
 		{{>molecules-secondary-nav }}
 		<div class="megamenu-highlights">
 			<div>
-				<h3><a href="{{url}}">History</a></h3>
+				<div class="megamenu-title">
+					<h3><a href="{{url}}">History</a></h3>
+				</div>
 				<p>{{excerpt.short}}</p>
 				<p><a href="{{url}}" class="button-link">Read more</a></p>
 			</div>
 			<div>
-				<h3><a href="{{url}}">Mission</a></h3>
+				<div class="megamenu-title">
+					<h3><a href="{{url}}">Mission</a></h3>
+				</div>
 				<p>{{excerpt.short}}</p>
 				<p><a href="{{url}}" class="button-link">Read more</a></p>
 			</div>
