--- a/styleguide/source/_patterns/02-organisms/02-megamenus/02-megamenu-pet-owners.mustache
+++ b/styleguide/source/_patterns/02-organisms/02-megamenus/02-megamenu-pet-owners.mustache
@@ -2,7 +2,9 @@
 	<div class="container">
 		{{>molecules-secondary-nav }}
 		<div class="megamenu-highlights">
-			<h3>Facility Features and Special Procedures</h3>
+			<div class="megamenu-title">
+				<h3>Facility Features and Special Procedures</h3>
+			</div>
 			<p>{{excerpt.medium}}</p>
 			<ul class="twocolumn bullets divider-bottom">
 				<li>Facility Features and Special Procedures</li>
