--- a/styleguide/source/_patterns/03-templates/03-doctors/01-doctors-detail.mustache
+++ b/styleguide/source/_patterns/03-templates/03-doctors/01-doctors-detail.mustache
@@ -5,7 +5,7 @@
 		<div class="doctor-photo">
 			{{>atoms-image-panoramic}}
 			<div class="doctor-name">
-				<h2>{{name.first}} {{name.last}}<br>{{jobTitle}}</h2>
+				<h2>{{>molecules-doctor-name-title}}</h2>
 			</div>
 		</div>
 		{{# listItems.three}}
