--- a/styleguide/source/css/patterns/_toggle.scss
+++ b/styleguide/source/css/patterns/_toggle.scss
@@ -6,15 +6,27 @@
 	}
 }
 
+.toggle {
+	margin-bottom: 2em;
+}
+
 .toggle-trigger {
 	position: relative;
-	padding: 1em 0 1em 1em;
-	border-top: 1px solid;
+	padding: .25em 0 1em 4em;
+	border-top: 1px solid $blue;
 
 	&:before {
 		content: '+';
+		font-size: 1.5em;
+		padding: .25em .125em;
+		width: 1.25em;
+		text-align: center;
+		line-height: 1;
 		position: absolute;
 		left: 0;
+		top: -1px;
+		background-color: $blue;
+		color: white;
 	}
 
 	&:hover {
@@ -25,7 +37,7 @@
 	}
 
 	&.active:before {
-		content: '-';
+		content: '—';
 	}		
 
 	p {
@@ -40,7 +52,7 @@
 
 .toggle-target {
 	display: none;
-	padding: 0 0 1em 1em;
+	padding: 0 0 1em 4em;
 
 	> * {
 		//margin: 0;
