--- a/styleguide/source/css/layout/_thankyou.scss
+++ b/styleguide/source/css/layout/_thankyou.scss
@@ -53,7 +53,7 @@
 }
 
 .thankyou-unit {
-  padding: $section-spacing;
+  padding: $section-spacing*.75;
   border: 1px solid $border-color;
   margin-bottom: $grid_padding;
 }
@@ -77,6 +77,19 @@
     @include breakpoint($xl) {
       @include column(3);
       @include last-col4;
+    }
+  }
+
+  p {
+    padding: 0;
+    font-size: ms(.2);
+    &:before, &:after {
+      position: relative;
+      font-size: 1em;
+      line-height: initial;
+      color: $text-color;
+      margin-left: 0;
+
     }
   }
 }
