--- a/styleguide/source/css/style.css
+++ b/styleguide/source/css/style.css
@@ -3090,7 +3090,7 @@ footer a {
 
 /* line 55, layout/_thankyou.scss */
 .thankyou-unit {
-  padding: 2rem;
+  padding: 1.5rem;
   border: 1px solid #d9d6d3;
   margin-bottom: 3.5%;
 }
@@ -3195,6 +3195,19 @@ footer a {
   .thankyou-list .thankyou-unit:nth-of-type(4n+5) {
     clear: both;
   }
+}
+/* line 83, layout/_thankyou.scss */
+.thankyou-list p {
+  padding: 0;
+  font-size: 1.10103rem;
+}
+/* line 86, layout/_thankyou.scss */
+.thankyou-list p:before, .thankyou-list p:after {
+  position: relative;
+  font-size: 1em;
+  line-height: initial;
+  color: #413732;
+  margin-left: 0;
 }
 
 /* line 1, layout/_services.scss */
