clear up responsive table css

--- a/styleguide/source/_patterns/00-atoms/08-tables/00-table.mustache
+++ b/styleguide/source/_patterns/00-atoms/08-tables/00-table.mustache
@@ -1,4 +1,4 @@
-<table class="responsive" id="investment-list">
+<table class="responsive" id="service-hours">
 	<thead>
 		<tr>
 			<th>&nbsp;</th>
@@ -44,7 +44,7 @@
 	</tr>
 	<tr>
 		<td>Neurology</td>
-		<td colspan="7">Please call for specific dates and times</td>
+		<td colspan="7" class="please-call">Please call for specific dates and times</td>
 	</tr>
 	<tr>
 		<td>Oncology</td>
@@ -58,7 +58,7 @@
 	</tr>
 	<tr>
 		<td>Ophthamology</td>
-		<td colspan="7">Please call for specific dates and times</td>
+		<td colspan="7" class="please-call">Please call for specific dates and times</td>
 	</tr>
 	<tr>
 		<td>Radiology</td>
