--- a/styleguide/source/css/styleguide-specific.css
+++ b/styleguide/source/css/styleguide-specific.css
@@ -1231,10 +1231,18 @@ This query will take effect for any screen smaller than 1024px
     font-stretch: normal;
   }
   /* line 86, patterns/_tables.scss */
+  table.responsive td.please-call {
+    padding-left: 2em;
+  }
+  /* line 88, patterns/_tables.scss */
+  table.responsive td.please-call:before {
+    content: none !important;
+  }
+  /* line 93, patterns/_tables.scss */
   table.responsive td:last-child {
     border-bottom: none;
   }
-  /* line 91, patterns/_tables.scss */
+  /* line 98, patterns/_tables.scss */
   table.responsive td:before {
     /* Now like a table header */
     position: absolute;
@@ -1248,36 +1256,36 @@ This query will take effect for any screen smaller than 1024px
   }
 
   /* Label for data on specific tables */
-  /* line 105, patterns/_tables.scss */
-  #investment-list td:nth-of-type(1):before {
+  /* line 112, patterns/_tables.scss */
+  #service-hours td:nth-of-type(1):before {
     content: "";
   }
-  /* line 106, patterns/_tables.scss */
-  #investment-list td:nth-of-type(2):before {
+  /* line 113, patterns/_tables.scss */
+  #service-hours td:nth-of-type(2):before {
     content: "Sun";
   }
-  /* line 107, patterns/_tables.scss */
-  #investment-list td:nth-of-type(3):before {
+  /* line 114, patterns/_tables.scss */
+  #service-hours td:nth-of-type(3):before {
     content: "Mon";
   }
-  /* line 108, patterns/_tables.scss */
-  #investment-list td:nth-of-type(4):before {
+  /* line 115, patterns/_tables.scss */
+  #service-hours td:nth-of-type(4):before {
     content: "Tues";
   }
-  /* line 109, patterns/_tables.scss */
-  #investment-list td:nth-of-type(5):before {
+  /* line 116, patterns/_tables.scss */
+  #service-hours td:nth-of-type(5):before {
     content: "Wed";
   }
-  /* line 110, patterns/_tables.scss */
-  #investment-list td:nth-of-type(6):before {
+  /* line 117, patterns/_tables.scss */
+  #service-hours td:nth-of-type(6):before {
     content: "Thu";
   }
-  /* line 111, patterns/_tables.scss */
-  #investment-list td:nth-of-type(7):before {
+  /* line 118, patterns/_tables.scss */
+  #service-hours td:nth-of-type(7):before {
     content: "Fri";
   }
-  /* line 112, patterns/_tables.scss */
-  #investment-list td:nth-of-type(8):before {
+  /* line 119, patterns/_tables.scss */
+  #service-hours td:nth-of-type(8):before {
     content: "Sat";
   }
 }
