--- a/styleguide/source/css/styleguide-specific.css
+++ b/styleguide/source/css/styleguide-specific.css
@@ -433,18 +433,17 @@ Animate specific properties
 
 /* 
 ////////////////////////////////////////////////////////////////////////////
-From 40 Weeks, so it'll need some TLC
+site-wide form styles 
 ////////////////////////////////////////////////////////////////////////////
 */
-/* site-wide form styles */
 /* get rid of "default" iOS button styling for submit buttons */
-/* line 11, patterns/_forms.scss */
+/* line 10, patterns/_forms.scss */
 input[type=submit] {
   -moz-appearance: none;
   -webkit-appearance: none;
 }
 
-/* line 15, patterns/_forms.scss */
+/* line 14, patterns/_forms.scss */
 *[type="submit"], *.submit {
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -486,12 +485,12 @@ input[type=submit] {
 *[type="submit"]:hover, *[type="submit"]:focus, *.submit:hover, *.submit:focus {
   cursor: pointer;
 }
-/* line 21, patterns/_forms.scss */
+/* line 20, patterns/_forms.scss */
 *[type="submit"] + *[type="submit"], *[type="submit"] + *.submit, *.submit + *[type="submit"], *.submit + *.submit {
   margin-left: 1em;
 }
 
-/* line 26, patterns/_forms.scss */
+/* line 25, patterns/_forms.scss */
 input[type="email"],
 input[type="password"],
 input[type="text"],
@@ -531,7 +530,7 @@ textarea {
   -webkit-transition-timing-function: ease-in-out;
   transition-timing-function: ease-in-out;
 }
-/* line 50, patterns/_forms.scss */
+/* line 49, patterns/_forms.scss */
 input[type="email"]:focus,
 input[type="password"]:focus,
 input[type="text"]:focus,
@@ -544,17 +543,17 @@ textarea:focus {
   border: 1px solid #928a81;
 }
 
-/* line 54, patterns/_forms.scss */
+/* line 53, patterns/_forms.scss */
 textarea {
   min-height: 100px;
 }
 
-/* line 64, patterns/_forms.scss */
+/* line 57, patterns/_forms.scss */
 form {
   position: relative;
 }
 
-/* line 68, patterns/_forms.scss */
+/* line 61, patterns/_forms.scss */
 label {
   font-family: "CustomFont", "Montserrat", Helvetica, Arial, sans-serif;
   font-weight: 400;
@@ -574,34 +573,17 @@ label {
   overflow: hidden;
 }
 
-/* line 82, patterns/_forms.scss */
-select, input[type="select"] {
-  /*
-  @include appearance(none);
-  font-size: 1rem;
-  outline: none;
-  padding: .65em 40px .65em 0; 
-  position: relative;
-  @include border-radius(0);
-  border: none;
-
-  &:active, &:focus {
-    @include font-regular;
-  } 
-  */
-}
-
-/* line 99, patterns/_forms.scss */
+/* line 75, patterns/_forms.scss */
 .field-container {
   margin-bottom: 1.5rem;
 }
 
-/* line 105, patterns/_forms.scss */
+/* line 81, patterns/_forms.scss */
 fieldset.checkboxes li {
   display: inline-block;
   margin: .5em 1em 1em 0;
 }
-/* line 110, patterns/_forms.scss */
+/* line 86, patterns/_forms.scss */
 fieldset.checkboxes label {
   color: #413732;
   position: relative;
@@ -609,25 +591,25 @@ fieldset.checkboxes label {
 }
 
 /* set input placeholder color to text color */
-/* line 121, patterns/_forms.scss */
+/* line 97, patterns/_forms.scss */
 ::-webkit-input-placeholder {
   color: #ac9b93;
   vertical-align: top;
 }
 
-/* line 125, patterns/_forms.scss */
+/* line 101, patterns/_forms.scss */
 ::-moz-placeholder {
   color: #ac9b93;
   vertical-align: top;
 }
 
-/* line 129, patterns/_forms.scss */
+/* line 105, patterns/_forms.scss */
 :-ms-input-placeholder {
   color: #ac9b93;
   vertical-align: top;
 }
 
-/* line 133, patterns/_forms.scss */
+/* line 109, patterns/_forms.scss */
 :-moz-placeholder {
   color: #ac9b93;
   vertical-align: top;
@@ -954,138 +936,6 @@ figure figcaption {
   font-family: "FontAwesome";
   margin-right: .5em;
   color: #d6a663;
-}
-
-/* 
-////////////////////////////////////////////////////////////////////////////
-Error/Valid Messages (defaults are kinda messy...need to tidy up)
-////////////////////////////////////////////////////////////////////////////
-*/
-/* line 9, patterns/_notifications.scss */
-.messages li {
-  font-family: "CustomFont", "Montserrat", Helvetica, Arial, sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-stretch: normal;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-size: .8em;
-}
-/* line 13, patterns/_notifications.scss */
-.messages .error {
-  padding-top: 10px;
-  color: red;
-}
-/* line 17, patterns/_notifications.scss */
-.messages .success {
-  color: green;
-  padding-top: 10px;
-}
-
-/* line 24, patterns/_notifications.scss */
-.errorlist li {
-  font-family: "CustomFont", "Montserrat", Helvetica, Arial, sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-stretch: normal;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-size: .8em;
-  color: red;
-  padding-top: 10px;
-  padding-right: 5px;
-}
-
-/* line 33, patterns/_notifications.scss */
-.message, .error-message, .valid-message {
-  display: block;
-  margin: 1em 0;
-  float: left;
-}
-
-/* line 40, patterns/_notifications.scss */
-.invalid .error-message {
-  float: none;
-}
-
-/* line 45, patterns/_notifications.scss */
-.error-message, .valid-message, .message {
-  margin: -.75em 0 1.75em 0;
-  font-size: 0.78615rem;
-  clear: both;
-  font-family: "CustomFont", "Montserrat", Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: normal;
-}
-/* line 51, patterns/_notifications.scss */
-.error-message a, .valid-message a, .message a {
-  font-family: "CustomFont", "Montserrat", Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: normal;
-}
-/* line 56, patterns/_notifications.scss */
-.error-message ul li, .valid-message ul li, .message ul li {
-  font-size: 0.78615rem;
-}
-
-/* line 62, patterns/_notifications.scss */
-.message {
-  color: #bfbfbf;
-}
-
-/* line 66, patterns/_notifications.scss */
-.error-message {
-  color: red;
-}
-/* line 68, patterns/_notifications.scss */
-.error-message li {
-  line-height: 1;
-}
-/* line 70, patterns/_notifications.scss */
-.error-message li:before {
-  content: "\f0aa";
-  font-family: "FontAwesome";
-  margin-right: .375em;
-  font-size: .9em;
-  float: left;
-}
-
-/* line 81, patterns/_notifications.scss */
-.valid-message {
-  color: green;
-}
-/* line 83, patterns/_notifications.scss */
-.valid-message:before {
-  content: "\f058";
-  font-family: "FontAwesome";
-  margin-right: .375em;
-  font-size: .9em;
-  float: left;
-}
-
-/* Form notifications */
-/* line 98, patterns/_notifications.scss */
-label.valid {
-  color: green;
-  font-weight: bold;
-}
-/* line 103, patterns/_notifications.scss */
-label.error {
-  color: red;
-  font-weight: bold;
-}
-
-/* line 110, patterns/_notifications.scss */
-input.is-valid {
-  border: 1px solid green;
-  background: #e6ffe6;
-}
-/* line 115, patterns/_notifications.scss */
-input.is-error {
-  border: 1px solid red;
-  background: #ffe5e5;
 }
 
 /* line 1, patterns/_pagination.scss */
@@ -1758,30 +1608,15 @@ Special Formatting
 /* 
 ////////////////////////////////////////////////////////////////////////////
 Styles not specific to any particular site page. Place things like "general" paragraph styles, heading styles, base list styles, etc. here.
-
-If you're calling the container mixin, you can define a custom max-width. Otherwise, the max-width's default value is 81.25em (1300px)
-
-.container {
-  @include container(70em);
-}
 ////////////////////////////////////////////////////////////////////////////
 */
-/* 
-////////////////////////////////////////////////////////////////////////////
-General Typographic Styles
-$s: 600px;
-$m: 768px;
-$l: 1024px;
-$xl: 1200px;
-////////////////////////////////////////////////////////////////////////////
-*/
-/* line 24, layout/_global.scss */
+/* line 7, layout/_global.scss */
 html {
   font-size: 1em;
   /* change this for different breakpoints to make a responsive typographic scale */
 }
 
-/* line 28, layout/_global.scss */
+/* line 11, layout/_global.scss */
 body {
   font-family: "CustomFont", "Montserrat", Helvetica, Arial, sans-serif;
   font-weight: 400;
@@ -1792,20 +1627,20 @@ body {
   position: relative;
 }
 
-/* line 35, layout/_global.scss */
+/* line 18, layout/_global.scss */
 ::selection {
   background: rgba(214, 166, 99, 0.25);
   color: #413732;
 }
 
-/* line 40, layout/_global.scss */
+/* line 23, layout/_global.scss */
 ::-moz-selection {
   /* Firefox */
   background: rgba(214, 166, 99, 0.25);
   color: #413732;
 }
 
-/* line 48, layout/_global.scss */
+/* line 31, layout/_global.scss */
 .container {
   position: relative;
   margin: auto;
@@ -1818,14 +1653,14 @@ body {
   clear: both;
 }
 
-/* line 52, layout/_global.scss */
+/* line 35, layout/_global.scss */
 hr {
   background-color: #c6c1bd;
   height: 1px;
   border: none;
 }
 
-/* line 58, layout/_global.scss */
+/* line 41, layout/_global.scss */
 .primary {
   margin-bottom: 2rem;
   clear: both;
@@ -1839,7 +1674,7 @@ hr {
   margin-left: 0;
 }
 @media (min-width: 48em) {
-  /* line 58, layout/_global.scss */
+  /* line 41, layout/_global.scss */
   .primary {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -1852,7 +1687,7 @@ hr {
   }
 }
 @media (min-width: 64em) {
-  /* line 58, layout/_global.scss */
+  /* line 41, layout/_global.scss */
   .primary {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -1864,21 +1699,21 @@ hr {
     margin-left: 0;
   }
 }
-/* line 71, layout/_global.scss */
+/* line 54, layout/_global.scss */
 .primary ul, .primary ol {
   margin: 0 0 1em 0;
 }
-/* line 73, layout/_global.scss */
+/* line 56, layout/_global.scss */
 .primary ul li, .primary ol li {
   margin-bottom: 1em;
 }
-/* line 78, layout/_global.scss */
+/* line 61, layout/_global.scss */
 .primary ol {
   list-style: decimal;
 }
 
 @media (min-width: 48em) {
-  /* line 83, layout/_global.scss */
+  /* line 66, layout/_global.scss */
   .twocolumn {
     -moz-column-count: 2;
     -webkit-column-count: 2;
@@ -1886,12 +1721,12 @@ hr {
   }
 }
 
-/* line 90, layout/_global.scss */
+/* line 73, layout/_global.scss */
 .clear-none {
   clear: none;
 }
 
-/* line 94, layout/_global.scss */
+/* line 77, layout/_global.scss */
 .sidebar {
   margin-bottom: 2rem;
   -moz-box-sizing: border-box;
@@ -1904,7 +1739,7 @@ hr {
   margin-left: 0;
 }
 @media (min-width: 48em) {
-  /* line 94, layout/_global.scss */
+  /* line 77, layout/_global.scss */
   .sidebar {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -1919,7 +1754,7 @@ hr {
   }
 }
 @media (min-width: 64em) {
-  /* line 94, layout/_global.scss */
+  /* line 77, layout/_global.scss */
   .sidebar {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -1934,12 +1769,12 @@ hr {
   }
 }
 
-/* line 110, layout/_global.scss */
+/* line 93, layout/_global.scss */
 section {
   margin-top: 2rem;
 }
 
-/* line 114, layout/_global.scss */
+/* line 97, layout/_global.scss */
 .divider-top {
   padding-top: 0.5em;
   border-top: 1px solid;
@@ -1947,7 +1782,7 @@ section {
   border-color: #d9d6d3;
 }
 
-/* line 117, layout/_global.scss */
+/* line 100, layout/_global.scss */
 .divider-bottom {
   padding-bottom: 0.5em;
   border-bottom: 1px solid;
@@ -1955,7 +1790,7 @@ section {
   border-color: #d9d6d3;
 }
 
-/* line 120, layout/_global.scss */
+/* line 103, layout/_global.scss */
 .divider-left {
   padding-left: 0.5em;
   border-left: 1px solid;
@@ -1963,7 +1798,7 @@ section {
   border-color: #d9d6d3;
 }
 
-/* line 123, layout/_global.scss */
+/* line 106, layout/_global.scss */
 .divider-right {
   padding-right: 0.5em;
   border-right: 1px solid;
@@ -2084,29 +1919,24 @@ header .emergency p {
 }
 
 /* line 94, layout/_header.scss */
-.ie8 header .main-logo a {
-  background: url("../img/logo-temp.png") 0 0 no-repeat;
-}
-
-/* line 98, layout/_header.scss */
 .mobilenav-trigger {
   color: white;
   padding: 1em;
   margin-bottom: 1em;
   background-color: #d6a663;
 }
-/* line 104, layout/_header.scss */
+/* line 100, layout/_header.scss */
 .mobilenav-trigger:before {
   content: "\f0c9";
   font-family: "FontAwesome";
   margin-right: .5em;
 }
-/* line 111, layout/_header.scss */
+/* line 107, layout/_header.scss */
 .mobilenav-trigger.active:before {
   content: "\f00d";
 }
 @media (min-width: 64em) {
-  /* line 98, layout/_header.scss */
+  /* line 94, layout/_header.scss */
   .mobilenav-trigger {
     display: none;
   }
@@ -3036,18 +2866,6 @@ footer a {
   clear: both;
 }
 
-/*
-.previously-featured-pets {
-	@include breakpoint($m) {
-		@include column(6);
-		@include last;
-	}
-	@include breakpoint($l) {
-		@include column(3);
-		@include last;
-	}
-}
-*/
 /* line 1, layout/_thankyou.scss */
 .thankyou-quote {
   margin: 0 0 1em;
