--- a/styleguide/source/css/styleguide-specific.css
+++ b/styleguide/source/css/styleguide-specific.css
@@ -929,8 +929,10 @@ figure figcaption {
   border-bottom: 1px solid;
   margin-bottom: 1em;
   border-color: #d9d6d3;
+  padding-left: 1.5em;
+  text-indent: -1.5em;
 }
-/* line 112, patterns/_navigation.scss */
+/* line 114, patterns/_navigation.scss */
 .nav-secondary li:before, .highlight-box ul li:before {
   content: "\f178";
   font-family: "FontAwesome";
